# json-database

./: .gitignore  README.md  pyproject.toml
src/json_database/: database.py  encryption.py
tests/json_database/: test_database.py  test_encryption.py
